raylib/raylib.odin


    @(link_name="ImageResizeCanvas")
    image_resize_canvas :: proc(
        image : ^Image,
        new_width : _c.int,
        new_height : _c.int,
        offset_x : _c.int,
        offset_y : _c.int,
        color : Color
    ) ---;

    @(link_name="ImageMipmaps")
    image_mipmaps :: proc(image : ^Image) ---;

    @(link_name="ImageDither")
    image_dither :: proc(
        image : ^Image,
        r_bpp : _c.int,
        g_bpp : _c.int,
        b_bpp : _c.int,
        a_bpp : _c.int
    ) ---;

    @(link_name="ImageExtractPalette")
    image_extract_palette :: proc(
        image : Image,
        max_palette_size : _c.int,
        extract_count : ^_c.int
    ) -> ^Color ---;

    @(link_name="ImageText")
    image_text :: proc(
        text : cstring,
        font_size : _c.int,
        color : Color
    ) -> Image ---;

    @(link_name="ImageTextEx")
    image_text_ex :: proc(
        font : Font,
        text : cstring,
        font_size : _c.float,
        spacing : _c.float,
        tint : Color
    ) -> Image ---;

    @(link_name="ImageDraw")
    image_draw :: proc(
        dst : ^Image,
        src : Image,
        src_rec : Rectangle,
        dst_rec : Rectangle
    ) ---;

    @(link_name="ImageDrawRectangle")
    image_draw_rectangle :: proc(
        dst : ^Image,
        rec : Rectangle,
        color : Color
    ) ---;

    @(link_name="ImageDrawRectangleLines")
    image_draw_rectangle_lines :: proc(
        dst : ^Image,
        rec : Rectangle,
        thick : _c.int,
        color : Color
    ) ---;

    @(link_name="ImageDrawText")
    image_draw_text :: proc(
        dst : ^Image,
        position : Vector2,
        text : cstring,
        font_size : _c.int,
        color : Color
    ) ---;

    @(link_name="ImageDrawTextEx")
    image_draw_text_ex :: proc(
        dst : ^Image,
        position : Vector2,
        font : Font,
        text : cstring,
        font_size : _c.float,
        spacing : _c.float,
        color : Color
    ) ---;

    @(link_name="ImageFlipVertical")
    image_flip_vertical :: proc(image : ^Image) ---;

    @(link_name="ImageFlipHorizontal")
    image_flip_horizontal :: proc(image : ^Image) ---;

    @(link_name="ImageRotateCW")
    image_rotate_cw :: proc(image : ^Image) ---;

    @(link_name="ImageRotateCCW")
    image_rotate_ccw :: proc(image : ^Image) ---;

    @(link_name="ImageColorTint")
    image_color_tint :: proc(
        image : ^Image,
        color : Color
    ) ---;

    @(link_name="ImageColorInvert")
    image_color_invert :: proc(image : ^Image) ---;

    @(link_name="ImageColorGrayscale")
    image_color_grayscale :: proc(image : ^Image) ---;

    @(link_name="ImageColorContrast")
    image_color_contrast :: proc(
        image : ^Image,
        contrast : _c.float
    ) ---;

    @(link_name="ImageColorBrightness")
    image_color_brightness :: proc(
        image : ^Image,
        brightness : _c.int
    ) ---;

    @(link_name="ImageColorReplace")
    image_color_replace :: proc(
        image : ^Image,
        color : Color,
        replace : Color
    ) ---;

    @(link_name="GenImageColor")
    gen_image_color :: proc(
        width : _c.int,
        height : _c.int,
        color : Color
    ) -> Image ---;

    @(link_name="GenImageGradientV")
    gen_image_gradient_v :: proc(
        width : _c.int,
        height : _c.int,
        top : Color,
        bottom : Color
    ) -> Image ---;

    @(link_name="GenImageGradientH")
    gen_image_gradient_h :: proc(
        width : _c.int,
        height : _c.int,
        left : Color,
        right : Color
    ) -> Image ---;

    @(link_name="GenImageGradientRadial")
    gen_image_gradient_radial :: proc(
        width : _c.int,
        height : _c.int,
        density : _c.float,
        inner : Color,
        outer : Color
    ) -> Image ---;

    @(link_name="GenImageChecked")
    gen_image_checked :: proc(
        width : _c.int,
        height : _c.int,
        checks_x : _c.int,
        checks_y : _c.int,
        col1 : Color,
        col2 : Color
    ) -> Image ---;

    @(link_name="GenImageWhiteNoise")
    gen_image_white_noise :: proc(
        width : _c.int,
        height : _c.int,
        factor : _c.float
    ) -> Image ---;

    @(link_name="GenImagePerlinNoise")
    gen_image_perlin_noise :: proc(
        width : _c.int,
        height : _c.int,
        offset_x : _c.int,
        offset_y : _c.int,
        scale : _c.float
    ) -> Image ---;

    @(link_name="GenImageCellular")
    gen_image_cellular :: proc(
        width : _c.int,
        height : _c.int,
        tile_size : _c.int
    ) -> Image ---;

    @(link_name="GenTextureMipmaps")
    gen_texture_mipmaps :: proc(texture : ^Texture2D) ---;

    @(link_name="SetTextureFilter")
    set_texture_filter :: proc(
        texture : Texture2D,
        filter_mode : _c.int
    ) ---;

    @(link_name="SetTextureWrap")
    set_texture_wrap :: proc(
        texture : Texture2D,
        wrap_mode : _c.int
    ) ---;

    @(link_name="DrawTexture")
    draw_texture :: proc(
        texture : Texture2D,
        pos_x : _c.int,
        pos_y : _c.int,
        tint : Color
    ) ---;

    @(link_name="DrawTextureV")
    draw_texture_v :: proc(
        texture : Texture2D,
        position : Vector2,
        tint : Color
    ) ---;

    @(link_name="DrawTextureEx")
    draw_texture_ex :: proc(
        texture : Texture2D,
        position : Vector2,
        rotation : _c.float,
        scale : _c.float,
        tint : Color
    ) ---;

    @(link_name="DrawTextureRec")
    draw_texture_rec :: proc(
        texture : Texture2D,
        source_rec : Rectangle,
        position : Vector2,
        tint : Color
    ) ---;

    @(link_name="DrawTextureQuad")
    draw_texture_quad :: proc(
        texture : Texture2D,
        tiling : Vector2,
        offset : Vector2,
        quad : Rectangle,
        tint : Color
    ) ---;

    @(link_name="DrawTexturePro")
    draw_texture_pro :: proc(
        texture : Texture2D,
        source_rec : Rectangle,
        dest_rec : Rectangle,
        origin : Vector2,
        rotation : _c.float,
        tint : Color
    ) ---;

    @(link_name="DrawTextureNPatch")
    draw_texture_n_patch :: proc(
        texture : Texture2D,
        n_patch_info : NPatchInfo,
        dest_rec : Rectangle,
        origin : Vector2,
        rotation : _c.float,
        tint : Color
    ) ---;

    @(link_name="GetFontDefault")
    get_font_default :: proc() -> Font ---;

    @(link_name="LoadFont")
    load_font :: proc(file_name : cstring) -> Font ---;

    @(link_name="LoadFontEx")
    load_font_ex :: proc(
        file_name : cstring,
        font_size : _c.int,
        font_chars : ^_c.int,
        chars_count : _c.int
    ) -> Font ---;

    @(link_name="LoadFontFromImage")
    load_font_from_image :: proc(
        image : Image,
        key : Color,
        first_char : _c.int
    ) -> Font ---;

    @(link_name="LoadFontData")
    load_font_data :: proc(
        file_name : cstring,
        font_size : _c.int,
        font_chars : ^_c.int,
        chars_count : _c.int,
        type : _c.int
    ) -> ^CharInfo ---;

    @(link_name="GenImageFontAtlas")
    gen_image_font_atlas :: proc(
        chars : ^CharInfo,
        chars_count : _c.int,
        font_size : _c.int,
        padding : _c.int,
        pack_method : _c.int
    ) -> Image ---;

    @(link_name="UnloadFont")
    unload_font :: proc(font : Font) ---;

    @(link_name="DrawFPS")
    draw_fps :: proc(
        pos_x : _c.int,
        pos_y : _c.int
    ) ---;

    @(link_name="DrawText")
    draw_text :: proc(
        text : cstring,
        pos_x : _c.int,
        pos_y : _c.int,
        font_size : _c.int,
        color : Color
    ) ---;

    @(link_name="DrawTextEx")
    draw_text_ex :: proc(
        font : Font,
        text : cstring,
        position : Vector2,
        font_size : _c.float,
        spacing : _c.float,
        tint : Color
    ) ---;

    @(link_name="DrawTextRec")
    draw_text_rec :: proc(
        font : Font,
        text : cstring,
        rec : Rectangle,
        font_size : _c.float,
        spacing : _c.float,
        word_wrap : bool,
        tint : Color
    ) ---;

    @(link_name="DrawTextRecEx")
    draw_text_rec_ex :: proc(
        font : Font,
        text : cstring,
        rec : Rectangle,
        font_size : _c.float,
        spacing : _c.float,
        word_wrap : bool,
        tint : Color,
        select_start : _c.int,
        select_length : _c.int,
        select_text : Color,
        select_back : Color
    ) ---;

    @(link_name="MeasureText")
    measure_text :: proc(
        text : cstring,
        font_size : _c.int
    ) -> _c.int ---;

    @(link_name="MeasureTextEx")
    measure_text_ex :: proc(
        font : Font,
        text : cstring,
        font_size : _c.float,
        spacing : _c.float
    ) -> Vector2 ---;

    @(link_name="GetGlyphIndex")
    get_glyph_index :: proc(
        font : Font,
        character : _c.int
    ) -> _c.int ---;

    @(link_name="TextIsEqual")
    text_is_equal :: proc(
        text1 : cstring,
        text2 : cstring
    ) -> bool ---;

    @(link_name="TextLength")
    text_length :: proc(text : cstring) -> _c.uint ---;

    @(link_name="TextFormat")
    text_format :: proc(text : cstring) -> cstring ---;

    @(link_name="TextSubtext")
    text_subtext :: proc(
        text : cstring,
        position : _c.int,
        length : _c.int
    ) -> cstring ---;

    @(link_name="TextReplace")
    text_replace :: proc(
        text : cstring,
        replace : cstring,
        by : cstring
    ) -> cstring ---;

    @(link_name="TextInsert")
    text_insert :: proc(
        text : cstring,
        insert : cstring,
        position : _c.int
    ) -> cstring ---;

    @(link_name="TextJoin")
    text_join :: proc(
        text_list : ^cstring,
        count : _c.int,
        delimiter : cstring
    ) -> cstring ---;

    @(link_name="TextSplit")
    text_split :: proc(
        text : cstring,
        delimiter : _c.char,
        count : ^_c.int
    ) -> ^cstring ---;

    @(link_name="TextAppend")
    text_append :: proc(
        text : cstring,
        append : cstring,
        position : ^_c.int
    ) ---;

    @(link_name="TextFindIndex")
    text_find_index :: proc(
        text : cstring,
        find : cstring
    ) -> _c.int ---;

    @(link_name="TextToUpper")
    text_to_upper :: proc(text : cstring) -> cstring ---;

    @(link_name="TextToLower")
    text_to_lower :: proc(text : cstring) -> cstring ---;

    @(link_name="TextToPascal")
    text_to_pascal :: proc(text : cstring) -> cstring ---;

    @(link_name="TextToInteger")
    text_to_integer :: proc(text : cstring) -> _c.int ---;

    @(link_name="DrawLine3D")
    draw_line3_d :: proc(
        start_pos : Vector3,
        end_pos : Vector3,
        color : Color
    ) ---;

    @(link_name="DrawCircle3D")
    draw_circle3_d :: proc(
        center : Vector3,
        radius : _c.float,
        rotation_axis : Vector3,
        rotation_angle : _c.float,
        color : Color
    ) ---;

    @(link_name="DrawCube")
    draw_cube :: proc(
        position : Vector3,
        width : _c.float,
        height : _c.float,
        length : _c.float,
        color : Color
    ) ---;

    @(link_name="DrawCubeV")
    draw_cube_v :: proc(
        position : Vector3,
        size : Vector3,
        color : Color
    ) ---;

    @(link_name="DrawCubeWires")
    draw_cube_wires :: proc(
        position : Vector3,
        width : _c.float,
        height : _c.float,
        length : _c.float,
        color : Color
    ) ---;

    @(link_name="DrawCubeWiresV")
    draw_cube_wires_v :: proc(
        position : Vector3,
        size : Vector3,
        color : Color
    ) ---;
